--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
       "module": "CommonJS",
       "strict": true,
       "esModuleInterop": true,
-      "outDir": "dist"
+      "outDir": "dist",
+      "useUnknownInCatchVariables": false
     },
     "include": ["src"]
   }
