--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
+      "module": "NodeNext",
+      "moduleResolution": "NodeNext",
       "target": "ESNext",
-      "module": "CommonJS",
-      "strict": true,
+      "outDir": "./dist",
       "esModuleInterop": true,
-      "outDir": "dist",
+      "strict": true,
       "useUnknownInCatchVariables": false
     },
-    "include": ["src"]
+    "include": ["src/**/*.ts"]
   }
   
